--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: mout <mout@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/15 17:01:33 by ztouzri           #+#    #+#              #
-#    Updated: 2021/11/19 15:55:09 by mout             ###   ########.fr        #
+#    Updated: 2021/11/19 17:26:52 by mout             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,6 +28,6 @@ clean:
 	$(RM) $(OBJS)
 
 fclean: clean
-	$(RM) $(EXEC)
+	$(RM) $(NAME)
 
 re: fclean all
